--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -71,3 +71,13 @@ button {
 #footer {
     text-align: center;
 }
+
+#flush_success {
+    width: 100%;
+    padding-top: 28%;
+    padding-left: 2%;
+    padding-bottom: 28%;
+    margin-bottom: 15px;
+    color: #155724;
+    background-color: #d4edda;
+}
